My Second Assignment

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <h1>Welcome to My Second Webpage</h1>
 
-    <p><a href="Others/about.html"> take me to abouts us page</a></p>
-    <p><a href="Others/contact.html"> take me to contact us page</a></p>
-    <p><a href="Others/blog.html"> take me to blog us page</a></p>
+    <p><a href="others/about.html"> take me to abouts us page</a></p>
+    <p><a href="others/contact.html"> take me to contact us page</a></p>
+    <p><a href="others/blog.html"> take me to blog us page</a></p>
     <h3>This is About Us Page</h3>
     <h3>This is Contact Us Page</h3>
      <h3>This is Blog Us Page</h3>
